...
    _fuelType = "Benzină"; // deja default, dar poți schimba la altceva dacă vrei
  }

  @override
  Widget build(BuildContext context) {
    return AlertDialog(
      title: Text("Adaugă programare"),
      content: SingleChildScrollView(
        child: Form(
          key: _formKey,
          child: Column(
            mainAxisSize: MainAxisSize.min,
            children: [
...
      ),
      actions: [
        TextButton(
          onPressed: () => Navigator.pop(context),
          child: Text("Anulează"),
        ),
        ElevatedButton(onPressed: _saveForm, child: Text("Salvează")),
      ],
    );
  }

  bool _validateTimeInterval() {
    print('_starttime: ${_startTime} || _endTime: ${_endTime}');
...
